src/styles.css
/* @import "~bootstrap/dist/css/bootstrap.min.css";
@import "~font-awesome/css/font-awesome.min.css"; */

/* You can add global styles to this file, and also import other style files */
body {
    background-image: url("/Content/assets/images/background.jpg");
    background-size: 100%;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
    background-color: navy;
}

.btn { font-weight: 700; }

.container {
    background-color: white;
    padding: 25px 5px 5px 5px;
    /* width: 1024px !important; */
}

.container-flexible {
    background-color: white;
    padding: 25px !important;
}

.panel-heading {
     cursor: pointer;
}

.panel-body {
    min-height: 60px !important;
}

.panel-body:after {
    margin: -10px;
    padding: -10px;
}

.panel-footer {
    text-align: right;
    display: none;
}

.panel-footer:after {
    margin: -10px;
    padding: -10px;
}

.list-group {
    height: 193px !important;
    max-height: 193px !important;
    overflow-y: auto !important;
}

.list-group-item { 
    padding: 7px 10px;
    font-size: 9pt;
}

.new_item {
    font-weight: 700;
    font-style: italic;
    color: red;
}

.count {
    padding: 0 0 0 5px;
    font-weight: 700;
    font-style: italic;
    color: black;
}

